--- a/styles/sass/Composants/_restaurant.scss
+++ b/styles/sass/Composants/_restaurant.scss
@@ -8,6 +8,7 @@
     display: flex;
     margin-bottom: 20px;
     background-color: white;
+    position: relative;
 
     @media screen and (min-width: map-get($breakpoints, "mobile-landscape")) {
         width: 45%;
@@ -22,26 +23,26 @@
     }
 
 
-    & a{
+    a{
         width: 100%;
         height: 100%;
 
 
-        & img{
+        img{
             width: 100%;
             height: 150px;
             object-fit: cover;
             object-position: bottom;
         }
 
-        & .description{
+        .description{
             display: flex;
             flex-direction: row;
             align-items: flex-start;
             justify-content: space-between;
             padding: 15px 10px;
 
-            & div{
+            div{
                 display: flex;
                 flex-direction: column;
 
@@ -49,7 +50,7 @@
                     font-weight: bold;
                 }
 
-                & p, h3{
+                p, h3{
                     margin: 2px;
 
                 }
@@ -58,40 +59,12 @@
             }
 
 
-            & .icons{
-                font-size: 1.5rem;
-                background-color: transparent;
-                border: none;
-                padding: 0;
-                margin-right: 10px;
             
-
-                & .fas{
-                    display: none;         
-
-                }
-
-                &:hover{
-
-                    animation: showHeartGradually 1s 0s forwards;
-
-                    & .fas{
-                        display: inline;
-                        background: linear-gradient(to top, $secondary-color, $primary-color);
-                        -webkit-background-clip: text;
-                        -webkit-text-fill-color : transparent;
-                    }
-
-                    & .far{
-                        display: none;
-                    }
-                }
-            }
         }
     }
 
 
-    & .etiquette{
+    .etiquette{
         position: absolute;
         right: 10px;
         top: 10px;
@@ -100,5 +73,39 @@
         padding: 0.5em 1em;
         font-size: 0.7em;
         color: $tertiary-color-darken;
+    }
+
+    .icons{
+        font-size: 1.5rem;
+        background-color: transparent;
+        border: none;
+        padding: 0;
+        margin-right: 10px;
+        position: absolute;
+        bottom: 30px;
+        right: 10px;
+    
+
+        .fas{
+            display: none;         
+
+        }
+
+        &:hover{
+            transform-origin: bottom;
+            animation: showHeartGradually 1s 0s forwards;
+
+            .fas{
+                display: inline;
+                background: linear-gradient(to top, $secondary-color, $primary-color);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color : transparent;
+                //animation: showHeartGradually 1s 0s forwards;
+            }
+
+            .far{
+                display: none;
+            }
+        }
     }
 }
