--- a/styles/sass/Layout/_footer.scss
+++ b/styles/sass/Layout/_footer.scss
@@ -14,7 +14,7 @@ footer{
         }
     }
 
-    & ul{
+    ul{
         padding-left: 0;
 
         @media screen and (min-width: map_get($breakpoints, tablette)) {
@@ -22,19 +22,13 @@ footer{
             justify-content: space-around;
         }
 
-        & li{
+        li{
             list-style: none;
             margin-bottom: 10px;
             color: white;
             font-size: 0.8rem;
 
-            /*&:first-of-type{                
-                margin-bottom: 20px;
-                font-family: $font-title;
-                font-size: 1.1rem;
-            }*/
-
-            & a{
+            a{
                 color: white;
 
                 &:visited{
@@ -42,7 +36,7 @@ footer{
                 }
             }
 
-            & i{
+            i{
                 margin-right: 5px;
                 width: 20px;
                 color: white;
