--- a/styles/sass/Pages/_accueil.scss
+++ b/styles/sass/Pages/_accueil.scss
@@ -2,7 +2,7 @@
 main{
     position: absolute;
     left: -5000px;
-    animation: show 3s 0s forwards;
+    animation: show $loading-duration 0s forwards;
 }
 
 .position{
@@ -11,7 +11,7 @@ main{
     padding: 1rem;
     margin: 0;
 
-    & i{
+    i{
         margin-right: 10px;
     }
 }
