amélioration de la transition au hover du coche des meal-item

--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -132,6 +132,22 @@
   /*from{ background: linear-gradient(to top, $secondary-color 0%, $primary-color 0%, transparent);}
   to{ background: linear-gradient(to top, $secondary-color, $primary-color 100%);}*/
 }
+@-webkit-keyframes rotationCoche {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: rotate(360deg) translateX(0);
+  }
+}
+@keyframes rotationCoche {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: rotate(360deg) translateX(0);
+  }
+}
 /*
     voir le problème des fonts
 */
@@ -255,14 +271,17 @@ button:not(.icons):hover {
   width: 0%;
   background-color: #99E2D0;
   color: white;
-  transition: all 0.3s;
+  transition: all 0.5s;
+}
+.meal-item i:before {
+  transform: translateX(100%) rotate(-1turn);
+  transition: transform 0.5s;
 }
 .meal-item:hover i {
   width: 15%;
 }
 .meal-item:hover i:before {
-  -webkit-animation: rotation 0.3s 0s linear forwards;
-          animation: rotation 0.3s 0s linear forwards;
+  transform: translateX(0%) rotate(0);
 }
 
 header {
