--- a/styles/css/accueil.css
+++ b/styles/css/accueil.css
@@ -132,6 +132,22 @@
   /*from{ background: linear-gradient(to top, $secondary-color 0%, $primary-color 0%, transparent);}
   to{ background: linear-gradient(to top, $secondary-color, $primary-color 100%);}*/
 }
+@-webkit-keyframes rotationCoche {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: rotate(360deg) translateX(0);
+  }
+}
+@keyframes rotationCoche {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: rotate(360deg) translateX(0);
+  }
+}
 /*
     voir le problème des fonts
 */
