--- a/styles/sass/Utils/_variables.scss
+++ b/styles/sass/Utils/_variables.scss
@@ -29,6 +29,7 @@ $tertiary-color-darken : darken($tertiary-color, 35%);
 //  ANIMATION, TRANSITION
 
 $transition-duration : 0.3s;
+$transition-duration-coche : 0.5s;
 
 // DURÉE DE L'ANIMATION DU LOADING
 $loading-duration : 2s;
