--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -178,6 +178,10 @@ h1, h2, h3 {
   font-weight: lighter;
 }
 
+h2 {
+  font-size: 2rem;
+}
+
 section {
   display: flex;
   flex-direction: column;
