--- a/styles/sass/Composants/_button.scss
+++ b/styles/sass/Composants/_button.scss
@@ -13,11 +13,31 @@ button:not(.icons){
     align-self: center;
     box-shadow: 0 2px 4px 0px $shadow-gray;
     transition: box-shadow 0.5s;
+    position: relative;
+    z-index: 1;
+
+    &::after{
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        border-radius: 30px;
+        background-image: linear-gradient(lighten($secondary-color, 10% ), lighten($primary-color, 10%));
+        opacity: 0;
+        transition: opacity 0.5s;
+        z-index: -1;
+    }
 
 
     &:hover{
-        background-image: linear-gradient(lighten($secondary-color, 5% ), lighten($primary-color, 5%));
+        //background-image: linear-gradient(lighten($secondary-color, 5% ), lighten($primary-color, 5%));
         box-shadow: 0 2px 4px 3px darken($shadow-gray, 40%);
-        font-weight: bold;
+        //font-weight: bold;
+
+        &::after{
+            opacity: 1;
+        }
     }
 }
