--- a/styles/css/accueil.css
+++ b/styles/css/accueil.css
@@ -206,7 +206,7 @@ a, a:visited {
   font-weight: bold;
 }
 
-button:not(.icons) {
+button:not(.heart) {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -222,7 +222,7 @@ button:not(.icons) {
   position: relative;
   z-index: 1;
 }
-button:not(.icons)::after {
+button:not(.heart)::after {
   content: "";
   position: absolute;
   top: 0;
@@ -235,10 +235,10 @@ button:not(.icons)::after {
   transition: opacity 0.5s;
   z-index: -1;
 }
-button:not(.icons):hover {
+button:not(.heart):hover {
   box-shadow: 0 2px 4px 3px #3c3a3a;
 }
-button:not(.icons):hover::after {
+button:not(.heart):hover::after {
   opacity: 1;
 }
 
@@ -365,32 +365,44 @@ button:not(.icons):hover::after {
   font-size: 0.7em;
   color: #2c9c81;
 }
-.restaurant .icons {
+.restaurant .heart {
   font-size: 1.5rem;
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  margin-right: 10px;
   position: absolute;
   bottom: 30px;
   right: 10px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  /* margin-right: 10px;
+   position: absolute;
+   bottom: 30px;
+   right: 10px;*/
 }
-.restaurant .icons .fas {
-  display: none;
+.restaurant .heart .fas {
+  display: flex;
+  position: absolute;
+  top: 0%;
+  opacity: 0;
+  transition: all 0.5s;
 }
-.restaurant .icons:hover {
+.restaurant .heart .far {
+  opacity: 1;
+  transition: opacity 0.5s;
+}
+.restaurant .heart:hover {
   transform-origin: bottom;
   -webkit-animation: showHeartGradually 1s 0s forwards;
           animation: showHeartGradually 1s 0s forwards;
 }
-.restaurant .icons:hover .fas {
-  display: inline;
+.restaurant .heart:hover .fas {
+  display: flex;
   background: linear-gradient(to top, #FF79DA, #9356DC);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  opacity: 1;
 }
-.restaurant .icons:hover .far {
-  display: none;
+.restaurant .heart:hover .far {
+  opacity: 0;
 }
 
 .loading-container {
