--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -76,13 +76,13 @@
 }
 @-webkit-keyframes showing {
   to {
-    top: 0;
+    transform: translateY(0);
     opacity: 1;
   }
 }
 @keyframes showing {
   to {
-    top: 0;
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -173,12 +173,12 @@ main {
   position: relative;
 }
 
-h1, h2, h3 {
+h1, h2:not(.roboto), h3 {
   font-family: "Shrikhand", cursif, sans-cerif;
   font-weight: lighter;
 }
 
-h2 {
+h2:not(.roboto) {
   font-size: 2rem;
 }
 
@@ -248,8 +248,9 @@ button:not(.heart):hover::after {
   background-color: white;
   overflow: hidden;
   margin: 10px 0;
-  position: relative;
-  top: 30px;
+  transform: translateY(30px);
+  /*position: relative;
+  top: 30px;*/
   opacity: 0;
 }
 @media screen and (min-width: 992px) {
@@ -452,26 +453,25 @@ main section > div:first-of-type .heart {
   background-color: transparent;
   border: none;
   padding: 0;
-  /* margin-right: 10px;
-   position: absolute;
-   bottom: 30px;
-   right: 10px;*/
 }
 main section > div:first-of-type .heart .fas {
   display: flex;
   position: absolute;
-  top: 0%;
+  top: 4%;
   opacity: 0;
   transition: all 0.5s;
 }
 main section > div:first-of-type .heart .far {
   opacity: 1;
-  transition: opacity 0.5s;
 }
 main section > div:first-of-type .heart:hover {
   transform-origin: bottom;
   -webkit-animation: showHeartGradually 1s 0s forwards;
           animation: showHeartGradually 1s 0s forwards;
+  /*.far{
+      //display: none;
+      //opacity: 0;
+  }*/
 }
 main section > div:first-of-type .heart:hover .fas {
   display: flex;
@@ -479,9 +479,6 @@ main section > div:first-of-type .heart:hover .fas {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 1;
-}
-main section > div:first-of-type .heart:hover .far {
-  opacity: 0;
 }
 main button:not(.heart) {
   margin: 2rem;
