--- a/styles/sass/Composants/_meal_item.scss
+++ b/styles/sass/Composants/_meal_item.scss
@@ -1,5 +1,5 @@
 
-
+//  VOIR POUR MODIFIER LE POSITION RELATIVE ET TOP 30PX POUR TRANSFORM TRANSLATEY(30PX)
 
 .meal-item{
     display: flex;
@@ -7,8 +7,9 @@
     background-color: white;
     overflow: hidden;
     margin: 10px 0;
-    position: relative;
-    top: 30px;
+    transform: translateY(30px);
+    /*position: relative;
+    top: 30px;*/
     opacity: 0;
 
     @media screen and (min-width : map-get($breakpoints, desktop)) {
