--- a/styles/sass/Utils/_mixin.scss
+++ b/styles/sass/Utils/_mixin.scss
@@ -16,17 +16,11 @@
     background-color: transparent;
     border: none;
     padding: 0;
-   /* margin-right: 10px;
-    position: absolute;
-    bottom: 30px;
-    right: 10px;*/
-    
-
 
     .fas{
         display: flex;
         position: absolute;
-        top: 0%;
+        top: 4%;
         opacity: 0;
         transition: all 0.5s; 
 
@@ -34,7 +28,7 @@
 
     .far{
         opacity: 1;
-        transition: opacity 0.5s;
+        //transition: opacity 0.5s 0.5s;
     }
 
     &:hover{
@@ -50,10 +44,10 @@
             //animation: showHeartGradually 1s 0s forwards;
         }
 
-        .far{
+        /*.far{
             //display: none;
-            opacity: 0;
-        }
+            //opacity: 0;
+        }*/
     }
 
 }
